* Backends
  + Detect heterogeneous caches in hybrid CPUs on MacOS X,
    thanks to Paul Bone for the help.
  + Max frequencies are not ignored on Linux anymore (as in hwloc 2.7.0),
    but they may be slightly adjusted to avoid reporting hybrid CPUs
    because of features such as Intel Turbo Boost Max 3.0.
    - See the documentation of environment variable HWLOC_CPUKINDS_MAXFREQ.
* Tools
  + lstopo and other tools may now load Linux and x86 cpuid topology files
    from a tarball.
  + lstopo may now replace the P# and L# index prefixes with custom strings
    thanks to --os-index-prefix and --logical-index-prefix options.
* Misc
  + Add --disable-readme to avoid regenerating the top-level hwloc README
    file from the documentation.


Version 2.7.1
-------------
* Workaround crashes when virtual machines report incoherent x86 CPUID
  information about numbers of cores and threads.
  Thanks to Peter Bense for the report.
* Use setenv() instead of putenv() when trying to force enable oneAPI L0
  support, to avoid issues with applications that touch the environment,
  thanks to Josh Hursey for the patch.
* Add some warnings at the end of configure when GPU libraries are
  missing on the system or their path is missing in the environment.


Version 2.7.0
-------------
* Backends
  + Add support for NUMA nodes and caches with more than 64 PUs across
    multiple processor groups on Windows 11 and Windows Server 2022.
  + Group objects are not created for Windows processor groups anymore,
    except if HWLOC_WINDOWS_PROCESSOR_GROUP_OBJS=1 in the environment.
  + Expose "Cluster" group objects on Linux kernel 5.16+ for CPUs
    that share some internal cache or bus. This can be equivalent
    to the L2 Cache level on some platforms (e.g. x86) or a specific
    level between L2 and L3 on others (e.g. ARM Kungpeng 920).
    Thanks to Jonathan Cameron for the help.
    - HWLOC_DONT_MERGE_CLUSTER_GROUPS=1 may be set in the environment