@@ -31,6 +31,7 @@ Version 2.8.0
     but they may be slightly adjusted to avoid reporting hybrid CPUs
     because of features such as Intel Turbo Boost Max 3.0.
     - See the documentation of environment variable HWLOC_CPUKINDS_MAXFREQ.
+  + Hardwire the PCI locality of HPE Cray EX235a nodes.
 * Tools
   + lstopo and other tools may now load Linux and x86 cpuid topology files
     from a tarball.
